--- a/portfolio-frontend/src/NavbarStyles.css
+++ b/portfolio-frontend/src/NavbarStyles.css
@@ -1,11 +1,23 @@
 .navbar {
-    font-size: 1.25rem;  
+    font-size: 2rem;  
+    justify-content: space-between;
+
 }
 
 .nav-link {
     margin-right: 1rem; 
 }
 
-.navbar {
-    justify-content: space-between;
+
+.custom-nav-left{
+    margin-left: 0;
+}
+
+.mr-3{
+    margin-right:1rem;
+    
+}
+
+.icon-margin{
+    margin-right:1em;
 }
