--- a/portfolio-frontend/src/Projects.css
+++ b/portfolio-frontend/src/Projects.css
@@ -20,5 +20,21 @@
 
 .projectText{
     display: block;
-    /* color:#66FF00; */
+    font-family: 'Space Mono', monospace;
 }
+
+.projectImage{
+    box-shadow: 5px 5px 15px rgba(255, 255, 255, 1);
+    margin-right:2px;
+    border-radius: 10px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;  /* This will ensure smooth transition */
+     transform: scale(1);  
+
+}
+
+
+.projectImage:hover {
+    transform: scale(1.05);  /* Scale the image up by 5% */
+    /* box-shadow: 3px 3px 20px rgba(255, 255, 255, 0.5);  Deeper shadow on hover */
+    
+ }
