--- a/portfolio-frontend/src/Projects.css
+++ b/portfolio-frontend/src/Projects.css
@@ -1,7 +1,7 @@
 .projectpage {
     background-color: black;
     color: white;
-    height: 100vh;
+    /* height: 200vh; */
     display: block;
     align-items: center;
     justify-content: center;
@@ -11,7 +11,7 @@
 .project {
     background-color: black;
     color: white;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,4 +37,10 @@
     transform: scale(1.05);  /* Scale the image up by 5% */
     /* box-shadow: 3px 3px 20px rgba(255, 255, 255, 0.5);  Deeper shadow on hover */
     
+ }
+
+ .projectButton{
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; 
  }
