--- a/portfolio-frontend/src/Projects.css
+++ b/portfolio-frontend/src/Projects.css
@@ -36,8 +36,27 @@
 .projectImage:hover {
     transform: scale(1.05);  /* Scale the image up by 5% */
     /* box-shadow: 3px 3px 20px rgba(255, 255, 255, 0.5);  Deeper shadow on hover */
-    
+    opacity: 0.5;
  }
+
+ .overlayText {
+    position: relative;
+    top: 50%;
+    bottom:50%;
+    left: 50%;
+    transform: translate(-50%, 100%);  /*Centers the text */
+    color: #ffffff;  /* White text, adjust as needed */
+    font-size: 24px;  /* Adjust as needed */
+    font-weight: bold;
+    text-align: center;
+    opacity: 0;  /* Initially hidden */
+    transition: opacity 0.3s ease;  /* Smooth transition */
+    pointer-events: none;  /* Ensures the text doesn't interfere with hover on the image */
+}
+
+.projectImage:hover + .overlayText {
+    opacity: 1;  /* Show text on hover over the image */
+}
 
  .projectButton{
     display: flex;
