--- a/portfolio-frontend/src/Projects.css
+++ b/portfolio-frontend/src/Projects.css
@@ -11,7 +11,7 @@
 .project {
     background-color: black;
     color: white;
-    height: 80vh;
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,3 +63,28 @@
     justify-content: center; /* Center horizontally */
     align-items: center; 
  }
+
+ .arrow {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.arrow.top {
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.arrow.bottom {
+    bottom: 20%;
+    left: 0%;
+    transform: translateX(-50%);
+}
