--- a/portfolio-frontend/src/About.css
+++ b/portfolio-frontend/src/About.css
@@ -1,7 +1,7 @@
 .aboutpage {
     background-color: black;
     color: white;
-    height: 100vh;
+    /* height: 100vh; */
     display: block;
     align-items: center;
     justify-content: center;
